--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
 <div class="description">
-Handcrafted dioramas designed to elevate your diecast collection.
-Built with premium materials, realistic details, and precise scale accuracy.</div>
+Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
+Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.</div>
   
   <a href="special-sale.html" class="sale-square">
   <div class="sale-bg"></div>
@@ -240,7 +240,7 @@ Built with premium materials, realistic details, and precise scale accuracy.</di
 
 
 <a class="wa-float"
-href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
+href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape."
 target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
@@ -264,7 +264,7 @@ target="_blank">
   <div class="footer-copy">
     
 This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
-    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+    © 2026 Diecast.scape —  Custom handcrafted products & sales<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
@@ -288,7 +288,7 @@ Thank you for visiting.
   </div>
 </div>
   
-  <a href="special-sale.html" class="menu-sale">🔥 Special Sale</a>
+  <a href="special-sale.html" class="menu-sale">Special Sale 🔥</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
