--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
 <div class="description">
 Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
 Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.</div>
-  
+  <a class="sale-cta" href="special-sale.html">
+  <div class="sale-cta-inner">
+    <span class="sale-title">Special Sale</span>
+    <span class="sale-timer" id="saleTimeText">00:00:00</span>
+  </div>
+</a>
+
   <a href="special-sale.html" class="sale-square">
   <div class="sale-bg"></div>
 
