--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
-
+<section class="hero">
+  <h1>Miniature Worlds for Diecast Cars</h1>
+  <p>Handcrafted 1:64 Scale Dioramas</p>
+  <a href="#products" class="cta">Explore Collection</a>
+</section>
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
 <div class="description">
 Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
@@ -47,18 +51,10 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   <a class="sale-cta" href="special-sale.html">
   <div class="sale-cta-inner">
     <span class="sale-title">Special Sale</span>
-    <span class="sale-timer" id="saleTimeText">00:00:00</span>
+    <span class="sale-timer" id="saleTimeText">Loading...</span>
   </div>
 </a>
-
-  <a href="special-sale.html" class="sale-square">
-  <div class="sale-bg"></div>
-
-  <div class="sale-text">
-    <span class="sale-title">Special Sale</span>
-    <span class="sale-time" id="saleTimeText">Loading…</span>
-  </div>
-</a>
+<section id="products" class="products">
 
   <div class="coming-soon">
   New product.<span>Coming up</span>
@@ -245,7 +241,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   </a>
 </div>
 
-
+</section>
 
 <a class="wa-float"
 href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape."
