--- a/index.html
+++ b/index.html
@@ -41,25 +41,23 @@
 </header>
 <section class="hero">
   <h1>Miniature Worlds for Diecast Cars</h1>
-  <p>Handcrafted 1:64 Scale Dioramas</p>
+  <p>Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
+Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.</div>
+ </p>
   <a href="#products" class="cta">Explore Collection</a>
 </section>
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
-<div class="description">
-Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
-Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.</div>
   <a class="sale-cta" href="special-sale.html">
   <div class="sale-cta-inner">
     <span class="sale-title">Special Sale</span>
     <span class="sale-timer" id="saleTimeText">Loading...</span>
   </div>
 </a>
-<section id="products" class="products">
 
   <div class="coming-soon">
   New product.<span>Coming up</span>
   </div>
-  
+  <section id="products" class="products">
 <input
   type="text"
   id="searchInput"
