--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="menu-overlay" onclick="closeMenu()"></div>
 
   
-<body>
+<body1>
   
 <header class="site-header">
   <div class="header-inner">
@@ -44,9 +44,8 @@
   <p>Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
 Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.</div>
  </p>
-  <a href="#products" class="cta">Explore Collection</a>
+  <a href="#products" class="cta">Explore 》</a>
 </section>
-<div class="subtitle">Built in Scale. Crafted with Soul.</div>
   <a class="sale-cta" href="special-sale.html">
   <div class="sale-cta-inner">
     <span class="sale-title">Special Sale</span>
@@ -322,5 +321,5 @@ Thank you for visiting.
   }
 </script>
 
-</body>
+</body1>
 </html>
