--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="menu-overlay" onclick="closeMenu()"></div>
 
   
-<body1>
+<body>
   
 <header class="site-header">
   <div class="header-inner">
@@ -321,5 +321,5 @@ Thank you for visiting.
   }
 </script>
 
-</body1>
+</body>
 </html>
