--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
   <p>Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
 Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.</div>
  </p>
-  <a href="#products" class="cta">Explore 》</a>
-</section>
+  <a href="#products" class="cta">Explore </a>
   <a class="sale-cta" href="special-sale.html">
   <div class="sale-cta-inner">
     <span class="sale-title">Special Sale</span>
     <span class="sale-timer" id="saleTimeText">Loading...</span>
   </div>
-</a>
+  </a>
+</section>
+  
 
   <div class="coming-soon">
   New product.<span>Coming up</span>
