--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
  </p>
   <div class="middle">
     <a href="#products" class="cta">Explore </a>
+  </div>
+  <div class="middle">
   <a class="sale-cta" href="special-sale.html">
   <div class="sale-cta-inner">
     <span class="sale-title">Special Sale</span>
