--- a/index.html
+++ b/index.html
@@ -69,7 +69,63 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   onkeyup="searchProducts()"
   class="search-bar">
 
+<div class="section">
+  <div class="diorama-title">Lamborghini Handcrafted Diorama</div>
+
+  <div class="slider">
+    <img src="images/products/Image25.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image26.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image27.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image28.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image29.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image30.jpg" onclick="openLightbox(this.src)">
+    
+  </div>
+
+  <div class="price">
+    <span class="old">₹1149</span>
+    <span class="new">₹799</span>
+  </div>
+
+  <div class="discount">30.45% OFF · Save ₹350</div>
+  <div class="ship">+ Shipping charges applicable</div>
   
+  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  Details ▾
+</button>
+ <div class="product-details">
+  <p>
+    This is a <strong>fully assembled, ready-to-display diorama</strong>,
+    designed for collectors who value realism and craftsmanship.
+  </p>
+
+  <p>
+    The diorama comes enclosed in a <strong>box-style display</strong> with
+    <strong>built-in LED lighting</strong> and a
+    <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
+  </p>
+
+  <p>
+    An <strong>external power adapter is included</strong>, ensuring quick and
+    hassle-free setup.
+  </p>
+
+  <p><strong>Product Dimensions:</strong> 300 × 125 × 120 mm</p>
+
+  <p>
+    <strong>Note:</strong> Display models (cars) are
+    <strong>not included</strong> and are shown for representation purposes only.
+  </p>
+</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Lamborghini%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
+     target="_blank">
+     Order on WhatsApp
+  </a>
+</div>
+  
+    
 <div class="section">
   <div class="diorama-title">Porsche Handcrafted Diorama</div>
 
