--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   <div class="diorama-title">Lamborghini Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="images/products/Image25.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image25.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image26.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image27.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image28.jpg" onclick="openLightbox(this.src)">
