--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 
   <div class="slider">
     <img src="images/products/Image25.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image26.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image27.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image28.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image29.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image30.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image26.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image27.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image28.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image29.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image30.webp" onclick="openLightbox(this.src)">
     
   </div>
 
@@ -130,15 +130,15 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   <div class="diorama-title">Porsche Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="images/products/Image16.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image17.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image18.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image19.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image20.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image21.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image22.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image23.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image24.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image16.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image17.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image18.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image19.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image20.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image21.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image22.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image23.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image24.webp" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
@@ -188,14 +188,14 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   <div class="diorama-title">NISSAN Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="images/products/Image8.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image9.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image10.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image11.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image12.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image13.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image14.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image15.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image8.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image9.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image10.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image11.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image12.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image13.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image14.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image15.webp" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
@@ -247,13 +247,13 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 
   <div class="slider">
   
-    <img src="images/products/Image1.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image2.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image3.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image4.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image5.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/image6.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image7.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image1.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image2.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image3.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/image4.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image5.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/image6.webp" onclick="openLightbox(this.src)">
+    <img src="images/products/Image7.webp" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
