--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   class="search-bar">
 
 <div class="section">
-  <div class="diorama-title">Lamborghini Handcrafted Diorama</div>
+  <div class="diorama-title">Lamborghini Miniature Showcase, Handcrafted Diorama</div>
 
   <div class="slider">
     <img src="images/products/Image25.webp" onclick="openLightbox(this.src)">
@@ -127,7 +127,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   
     
 <div class="section">
-  <div class="diorama-title">Porsche Handcrafted Diorama</div>
+  <div class="diorama-title">Porsche Miniature Showcase, Handcrafted Diorama</div>
 
   <div class="slider">
     <img src="images/products/Image16.webp" onclick="openLightbox(this.src)">
@@ -185,7 +185,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 </div>
   
 <div class="section">
-  <div class="diorama-title">NISSAN Handcrafted Diorama</div>
+  <div class="diorama-title">Nissan Miniature Showcase, Handcrafted Diorama</div>
 
   <div class="slider">
     <img src="images/products/Image8.webp" onclick="openLightbox(this.src)">
@@ -243,7 +243,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 
 <!-- PRODUCT 2 -->
 <div class="section">
-  <div class="diorama-title">BMW Handcrafted Diorama</div>
+  <div class="diorama-title">BMW Miniature Showcase, Handcrafted Diorama</div>
 
   <div class="slider">
   
