--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <div id="lightbox" onclick="closeLightbox()">
   <img id="lightbox-img">
 </div>
-<!-- Overlay -->
 <div class="menu-overlay" onclick="closeMenu()"></div>
 
   
@@ -35,7 +34,7 @@
 
     <div class="header-title">DIECAST.SCAPE</div>
 
-    <!-- Hamburger -->
+
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
@@ -70,7 +69,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   class="search-bar">
 
 <div class="section">
-  <div class="diorama-title">Lamborghini Miniature Showcase, Handcrafted Diorama</div>
+  <div class="diorama-title">Lamborghini Miniature Display</div>
 
   <div class="slider">
     <img src="images/products/Image25.webp" onclick="openLightbox(this.src)">
@@ -119,7 +118,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 </div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Lamborghini%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Lamborghini%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
@@ -127,7 +126,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   
     
 <div class="section">
-  <div class="diorama-title">Porsche Miniature Showcase, Handcrafted Diorama</div>
+  <div class="diorama-title">Porsche Miniature Display</div>
 
   <div class="slider">
     <img src="images/products/Image16.webp" onclick="openLightbox(this.src)">
@@ -178,14 +177,14 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 </div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Porsche%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Porsche%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
 </div>
   
 <div class="section">
-  <div class="diorama-title">Nissan Miniature Showcase, Handcrafted Diorama</div>
+  <div class="diorama-title">Nissan Miniature Display</div>
 
   <div class="slider">
     <img src="images/products/Image8.webp" onclick="openLightbox(this.src)">
@@ -235,7 +234,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
  </div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Nissan%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Nissan%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
@@ -243,10 +242,9 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 
 <!-- PRODUCT 2 -->
 <div class="section">
-  <div class="diorama-title">BMW Miniature Showcase, Handcrafted Diorama</div>
+  <div class="diorama-title">BMW Miniature Display</div>
 
   <div class="slider">
-  
     <img src="images/products/Image1.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image2.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image3.webp" onclick="openLightbox(this.src)">
@@ -293,7 +291,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
  </div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20BMW%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20BMW%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
