--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Thank you for visiting.
   if (SALE_CONFIG.enabled || now >= saleDate) {
     timeText.innerHTML = "🔥 LIVE NOW";
   } else {
-    timeText.innerHTML = `Live on<br>${formatted}`;
+    timeText.innerHTML = `Live on ${formatted}`;
   }
 </script>
 
