--- a/special-sale.html
+++ b/special-sale.html
@@ -87,7 +87,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
 
   <p>
     📦 Delivery charges:
-    ₹90 up to 500g · ₹120 per kg  
+    ₹90 up to 500g · ₹120 per kg average, depends on location 
     <br><small>(Charges may vary slightly)</small>
   </p>
 
@@ -105,12 +105,107 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
 </main>
   <template id="sale-products">
 
+    <div class="section">
+  <div class="diorama-title">NISSAN SILVIA (S15) FAST AND FURIOUS</div>
+  <div class="slider-wrap">
+  <div class="slider">
+    <img src="images/newsale/Hot2.webp" onclick="openLightbox(this.src)">
+  </div>
+  </div>
+  <div class="price">
+    <span class="new">₹299</span>
+  </div>
+
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET02.%0AIs%20it%20available%3F"
+     target="_blank">
+     Book Now
+  </a>
+    </div>
+<div class="section">
+  <div class="diorama-title">1970 MONTE CARLO FAST AND FURIOUS</div>
+  <div class="slider-wrap">
+  <div class="slider">
+    <img src="images/newsale/Hot3.webp" onclick="openLightbox(this.src)">
+  </div>
+  </div>
+  <div class="price">
+    <span class="new">₹299</span>
+  </div>
+
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET03.%0AIs%20it%20available%3F"
+     target="_blank">
+     Book Now
+  </a>
+</div>
+    <div class="section">
+  <div class="diorama-title">1970 ROAD RUNNER FAST AND FURIOUS</div>
+  <div class="slider-wrap">
+  <div class="slider">
+    <img src="images/newsale/Hot4.webp" onclick="openLightbox(this.src)">
+  </div>
+  </div>
+  <div class="price">
+    <span class="new">₹299</span>
+  </div>
+
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET04.%0AIs%20it%20available%3F"
+     target="_blank">
+     Book Now
+  </a>
+    </div>
+    <div class="section">
+  <div class="diorama-title"> FAST AND FURIOUS</div>
+  <div class="slider-wrap">
+  <div class="slider">
+    <img src="images/newsale/Hot1.webp" onclick="openLightbox(this.src)">
+  </div>
+  </div>
+  <div class="price">
+    <span class="new">₹299</span>
+  </div>
+
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET01.%0AIs%20it%20available%3F"
+     target="_blank">
+     Book Now
+  </a>
+    </div>
+    <div class="section">
+  <div class="diorama-title">NISSAN SILVIA (S13) FAST AND FURIOUS</div>
+  <div class="slider-wrap">
+  <div class="slider">
+    <img src="images/newsale/Hot5.webp" onclick="openLightbox(this.src)">
+  </div>
+  </div>
+  <div class="price">
+    <span class="new">₹299</span>
+  </div>
+
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET05.%0AIs%20it%20available%3F"
+     target="_blank">
+     Book Now
+  </a>
+    </div>
 <div class="section">
   <div class="diorama-title">Porsche</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
-    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
+    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
   </div>
  <div class="sold-badge">SOLD</div>
   </div>
@@ -121,19 +216,18 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET01.%0AIs%20it%20available%3F"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET06.%0AIs%20it%20available%3F"
      target="_blank">
      Book Now
   </a>
 </div>
 
-<!-- PRODUCT 2 -->
 <div class="section">
   <div class="diorama-title">Nissan</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
-    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
+    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
   </div>
   <div class="sold-badge">SOLD</div>
   </div>
@@ -145,7 +239,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET02.%0AIs%20it%20available%3F"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET07.%0AIs%20it%20available%3F"
     target="_blank">
      Book Now
   </a>
