--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Special Sale | Diecast.scape</title>
   
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
@@ -125,7 +125,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="diorama-title">NISSAN SILVIA (S15) FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/newsale/Hot2.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot2.webp" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -144,7 +144,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="diorama-title">1970 MONTE CARLO FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/newsale/Hot3.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot3.webp" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -302,10 +302,10 @@ Thank you for visiting.
   <a href="return.html">Return & Cancellation</a>
   <a href="terms.html">Terms of Service</a>
 </nav>
-<script src="assets/js/config.js"></script>
-<script src="assets/js/core.js" defer></script>
-<script src="assets/js/products.js" defer></script>
-<script src="assets/js/sale.js" defer></script>
+<script src="/assets/js/config.js"></script>
+<script src="/assets/js/core.js" defer></script>
+<script src="/assets/js/products.js" defer></script>
+<script src="/assets/js/sale.js" defer></script>
 
 </body>
   </html>
