--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Thank you for visiting.
   </div>
 </div>
   
-  <a href="special-sale.html" class="menu-sale">Special Sale 🔥</a>
+  <a href="/special-sale/" class="menu-sale">Special Sale 🔥</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
