--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -99,6 +99,25 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   placeholder="Search..."
   onkeyup="searchProducts()"
   class="search-bar">
+  <div class="section">
+  <div class="diorama-title">NISSAN 350Z CUSTOM/PERSONNALISÉ AND FURIOUS</div>
+  <div class="slider-wrap">
+  <div class="slider">
+    <img src="/images/newsale/Hot1.webp" onclick="openLightbox(this.src)">
+  </div>
+  </div>
+  <div class="price">
+    <span class="new">₹299</span>
+  </div>
+
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET01.%0AIs%20it%20available%3F"
+     target="_blank">
+     Book Now
+  </a>
+  </div>
 <main id="sale-main">
 </main>
   <template id="sale-products">
