--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -22,7 +22,7 @@
 <!-- HEADER -->
 <header class="site-header">
   <div class="header-inner">
-    <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
+    <img src="/logo.png" class="header-logo" alt="Diecast Scape Logo">
 
     <div class="header-title">DIECAST.SCAPE</div>
 
@@ -125,7 +125,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="diorama-title">NISSAN 350Z CUSTOM/PERSONNALISÉ AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/newsale/Hot1.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot1.webp" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -182,7 +182,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="diorama-title">1970 ROAD RUNNER FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/newsale/Hot4.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot4.webp" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -202,7 +202,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="diorama-title">NISSAN SILVIA (S13) FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/newsale/Hot5.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot5.webp" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -221,8 +221,8 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="diorama-title">Porsche</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
-    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
   </div>
  <div class="sold-badge">SOLD</div>
   </div>
@@ -243,8 +243,8 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="diorama-title">Nissan</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
-    <img src="images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
   </div>
   <div class="sold-badge">SOLD</div>
   </div>
