--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -322,11 +322,12 @@ Thank you for visiting.
   <a href="terms.html">Terms of Service</a>
 </nav>
   <script src="/script.js"></script>
-<script src="/assets/js/sale.js" defer></script>
+<script src="/assets/js/sale.js"></script>
 <script src="/assets/js/config.js"></script>
-<script src="/assets/js/core.js" defer></script>
-<script src="/assets/js/products.js" defer></script>
+<script src="/assets/js/core.js"></script>
+<script src="/assets/js/products.js"></script>
 
 
 </body>
   </html>
+j
