--- a/index.html
+++ b/index.html
@@ -356,8 +356,9 @@ Thank you for visiting.
   <a href="terms.html">Terms of Service</a>
 </nav>
 
-  <script src="script.js"></script>
+  
   <script src="sale-config.js"></script>
+  <script src="/assets/js/core.js"></script>
 <script>
   const saleDate = new Date(SALE_CONFIG.start);
   const now = new Date();
