--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ Thank you for visiting.
 
   
   <script src="sale-config.js"></script>
-  <script src="/assets/Js/script.js"></script>
+  <script src="../assets/Js/script.js"></script>
 <script>
   const saleDate = new Date(SALE_CONFIG.start);
   const now = new Date();
