--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About us | Diecast.scape</title>
 
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
 
@@ -88,6 +88,6 @@ Thank you for visiting.
   <a href="return.html">Return & Cancellation</a>
   <a href="terms.html">Terms of Service</a>
 </nav>
-<script src="/assets/Js/script.js"></script>
+<script src="/assets/Js/Script.js"></script>
 </body>
 </html>
