--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -322,11 +322,10 @@ Thank you for visiting.
   <a href="terms.html">Terms of Service</a>
 </nav>
   
-<script src="/assets/js/sale.js"></script>
-<script src="/assets/js/config.js"></script>
-<script src="/assets/js/core.js"></script>
-<script src="/assets/js/products.js"></script>
-
+<script src="assets/ js/config.js"></script>
+<script src="assets/ js/core.js" defer></script>
+<script src="assets/ js/products.js" defer></script>
+<script src="assets/ js/sale.js" defer></script>
 
 </body>
   </html>
