--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
   
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/assets/css/style.css">
   
 </head>
 
@@ -357,9 +357,12 @@ Thank you for visiting.
 </nav>
 
   
-  <script src="sale-config.js"></script>
-  <script src="../assets/Js/script.js"></script>
-<script>
+  <script src="/assets/js/config.js"></script>
+<script src="/assets/js/core.js" defer></script>
+<script src="/assets/js/products.js" defer></script>
+<script src="/assets/js/mainale.js" defer></script>
+
+  <script>
   const saleDate = new Date(SALE_CONFIG.start);
   const now = new Date();
 
