--- a/about/index.html
+++ b/about/index.html
@@ -88,6 +88,6 @@ Thank you for visiting.
   <a href="return.html">Return & Cancellation</a>
   <a href="terms.html">Terms of Service</a>
 </nav>
-<script src="/assets/Js/Script.js"></script>
+<script src="/assets/ js/core.js" defer></script>
 </body>
 </html>
