--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
 <!-- HEADER -->
 <header class="site-header">
   <div class="header-inner">
-    <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
+    <img src="/logo.png" class="header-logo" alt="Diecast Scape Logo">
 
     <div class="header-title">DIECAST.SCAPE</div>
 
@@ -49,7 +49,7 @@
 We don’t rush production, and we don’t compromise on quality.</p>
   
 
-<p><a href="index.html">← Back to Home</a></p>
+<p><a href="/index.html">← Back to Home</a></p>
 
 </div>
 
@@ -80,13 +80,13 @@ Thank you for visiting.
     <div class="toggle-circle"></div>
   </div>
 </div>
- <a href="index.html" class="menu-sale">HOME</a>
-  <a href="special-sale.html" class="menu-sale">Special Sale 🔥</a>
-  <a href="about.html">About Us</a>
-  <a href="privacy.html">Privacy Policy</a>
-  <a href="shipping.html">Shipping Policy</a>
-  <a href="return.html">Return & Cancellation</a>
-  <a href="terms.html">Terms of Service</a>
+ <a href="/index.html" class="menu-sale">HOME</a>
+  <a href="/special-sale/" class="menu-sale">Special Sale 🔥</a>
+  <a href="/about/">About Us</a>
+  <a href="/privacy/">Privacy Policy</a>
+  <a href="/shipping/">Shipping Policy</a>
+  <a href="/return/">Return & Cancellation</a>
+  <a href="/terms/">Terms of Service</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
